# QtCmakeIOS

./: .gitignore  Build.bat  Build.sh  CMakeLists.txt  FileToEmbed.txt  MyLib.cpp  MyLib.h  README.md  main.cpp  rasterwindow.cpp  rasterwindow.h
